--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1947,8 +1947,8 @@ input, select, textarea {
 		position: relative;
 		overflow: hidden;
 		width: 100%;
-		background: #ffffff;
-		box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
+		background: rgba(255,255,255,0.75);
+		box-shadow: 0px 0px 0px 0px rgba(255, 255, 255,1);
 		-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
 		-webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
 		-ms-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
@@ -1967,7 +1967,7 @@ input, select, textarea {
 		}
 
 			#main > .panel.inactive {
-				opacity: 0;
+				opacity: 25%;
 			}
 
 			@media screen and (max-width: 736px) {
@@ -1978,21 +1978,7 @@ input, select, textarea {
 
 			}
 
-			#main > .panel.intro {
-				padding: 0;
-				height: 20em;
-				display: -moz-flex;
-				display: -webkit-flex;
-				display: -ms-flex;
-				display: flex;
-				-moz-flex-direction: row;
-				-webkit-flex-direction: row;
-				-ms-flex-direction: row;
-				flex-direction: row;
-				-moz-align-items: center;
-				-webkit-align-items: center;
-				-ms-align-items: center;
-				align-items: center;
+
 			}
 
 				#main > .panel.intro .pic {
@@ -2012,10 +1998,10 @@ input, select, textarea {
 
 					#main > .panel.intro .pic:before {
 						content: '';
-						position: absolute;
+						position: ;
 						top: 0;
 						left: 0;
-						background: url("images/overlay.png");
+						background: url("images/overlay.jpg");
 						width: 100%;
 						height: 100%;
 						z-index: 1;
